title alignment correction

--- a/themes/hugo-future-imperfect/static/css/main.css
+++ b/themes/hugo-future-imperfect/static/css/main.css
@@ -757,7 +757,7 @@ body {
 #header h1 {
     height: inherit;
     line-height: inherit;
-    padding: 0 0 0 1.5em;
+    padding: 0;
     white-space: nowrap;
 }
 
@@ -770,10 +770,6 @@ body {
     #header {
         height: 2.75em;
         line-height: 2.75em;
-    }
-
-    #header h1 {
-        padding: 0 0 0 1em;
     }
 }
 
